# autonomous-financial-auditor

./: .env.example  .gitignore  Dockerfile  README.md  architecture.md  demo_script.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml  deploy-aws.yml  financial-audit.yml
autonomous_financial_auditor/: __init__.py  main.py  models.py
autonomous_financial_auditor/agents/: __init__.py  financial_agent.py  tools.py
autonomous_financial_auditor/config/: __init__.py  settings.py
autonomous_financial_auditor/parsers/: __init__.py  base.py  csv_parser.py  factory.py  markdown_parser.py
src/: agent.py  github_client.py  handler.py  llm_bedrock_client.py  parser.py  vector_db.py
src/common/core/: clients.py  config.py
src/common/services/: dynamodb_client.py  embed_text.py  github_client.py  parser.py
src/knowledge_base_files/: balance_sheet_rules.json  cross_validation_rules.json  pnl_rules.json
src/lambdas/contact_llm/: Dockerfile  lambda_function.py
src/lambdas/issue_maker/: Dockerfile  lambda_function.py
src/lambdas/parse_file/: Dockerfile  lambda_function.py
terraform/: main.tf  outputs.tf  provider.tf  variables.tf
test/: test_agent.py
test/notebooks/: function_test.ipynb  function_test_v2.ipynb  function_test_v3.ipynb
tests/: __init__.py
tests/e2e/: test_complete_workflow.py
tests/integration/: test_agent_integration.py
tests/unit/: test_models.py  test_parsers.py
